syntax = "proto3";

option csharp_namespace = "CodexGrpc.Common";

package codex.common;

message StringValues {
  repeated string values = 1;
}
